0.40000 Wed Feb 15, 2012

    **** There are many changes to rendering, many of them incompatible.
       These changes *will* break existing form rendering.
       You must check that your rendering works before upgrading. Making a copy
       of the old code (the widget and rendering roles) may be helpful.
       Maintaining backward compatibility was making the code awkward and weird,
       unfortunately.
       (You do have tests for your forms, don't you?)
    Use Hash::Merge in merging update field info on creation
    Fix bug in copying widget_tags to fields by cloning field definitions
    Switch to using name 'element_attr' in fields instead of 'html_attr'
    Put wrapper class 'repinst' on Repeatable Instances unless they already have a wrapper class
    Remove 'javascript' field attribute. Put into *_attr hashref.
    Automatically put 'error' on element and wrapper.
    Switch to having the 'class' as a separate attribute from the _attr collection.
       Use 'element_class', 'wrapper_class' & 'label_class' arrayrefs
    Switch to having widget names by default be camel case; provide convenience
       methods for templates - uwidget, uwrapper, twidget, twrapper.
       ** this change will affect existing template systems, if they use the
          $field->widget method to get the widget name. See example templates.
    Create t/share/templates/form/form_in_one.tt
    Switch default rendering of checkbox to have label wrap input
    Add 'render_before_form' and 'render_after_form' subs; kind of silly, but
       might be useful in some cases.
    Add 'build_update_fields' to 'update_fields' processing to allow moving
       more of rendering settings into a separate role
    Change form 'html_attr' to use build_html_attr instead of default
    Change interface of html_field_attributes to also return attr (instead of in-place)
    Remove 'label_no_colon', make labels without colon the default.